# ruso-sino-georeffer

./: .gitignore
georef_topo_maps/: AGENTS.md  README.md  batch_process.py  main.py  pyproject.toml  requirements.txt  server.py
georef_topo_maps/index_map/: 6840s_100_r8_INDEX.dbf  6840s_100_r8_INDEX.sbn  6840s_100_r8_INDEX.sbx  6840s_100_r8_INDEX.shp  6840s_100_r8_INDEX.shx
georef_topo_maps/src/: __init__.py  collar_detector.py  coordinate_ocr.py  exporters.py  georeferencer.py  neatline_finder.py  shapefile_index.py  soviet_grid.py  visualizer.py  web_server.py
georef_topo_maps/src/georef_topo_maps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
